--- a/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxss
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxss
@@ -623,7 +623,7 @@
 }
 
 .merchant-btn {
-  margin-top: 24rpx;
+  margin: 24rpx 0;
   width: 160rpx;
   height: 58rpx;
   color: var(--gold-1);
@@ -634,7 +634,7 @@
 }
 
 .qa-btn {
-  margin-top: 24rpx;
+  margin: 24rpx 0;
   width: 140rpx;
   height: 56rpx;
   color: #fff;
