--- a/components/restaurant-item/index.wxml
+++ b/components/restaurant-item/index.wxml
@@ -2,7 +2,7 @@
   <view class="cover-wrap">
     <image class="cover" style="height: {{item.coverHeight}}rpx;" wx:if="{{item.coverHeight}}" src="{{item.cover}}?x-oss-process=image/resize,w_450" mode="aspectFill" />
     <image class="cover" wx:if="{{!item.coverHeight}}" src="{{item.cover}}?x-oss-process=image/resize,w_450" bindload="onCoverLoaded" mode="widthFix" />
-    <view class="type-label row">美食</view>
+    <view class="type-label row" wx:if="{{showTag}}">美食</view>
     <view class="address-info">
       <image class="address-icon" src="/images/address.png" />
       <text class="address-detail omit single">{{ item.address }}</text>
