--- a/pages/tab-bar-pages/mall/components/product-item/index.wxml
+++ b/pages/tab-bar-pages/mall/components/product-item/index.wxml
@@ -1,4 +1,4 @@
-<scenic-item wx:if="{{item.type === 1}}" item="{{item}}" />
-<hotel-item wx:if="{{item.type === 2}}" item="{{item}}" />
-<restaurant-item wx:if="{{item.type === 3}}" item="{{item}}" />
+<scenic-item wx:if="{{item.type === 1}}" item="{{item}}" showTag/>
+<hotel-item wx:if="{{item.type === 2}}" item="{{item}}" showTag />
+<restaurant-item wx:if="{{item.type === 3}}" item="{{item}}" showTag />
 <goods-item wx:if="{{item.type === 4}}" item="{{item}}" showTag />
