--- a/components/video-item/index.wxss
+++ b/components/video-item/index.wxss
@@ -7,6 +7,7 @@
   opacity: 1;
   transition: opacity .2s ease;
 }
+
 .cover-wrap {
   position: relative;
   font-size: 0;
@@ -15,6 +16,17 @@
 }
 .cover {
   width: 350rpx;
+}
+.final-cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  opacity: 0;
+}
+.final-cover.show {
+  opacity: 1;
+  transition: opacity .5s ease;
 }
 
 .private-tag {
