--- a/pages/tab-bar-pages/home/components/top-media/index.wxss
+++ b/pages/tab-bar-pages/home/components/top-media/index.wxss
@@ -1,19 +1,20 @@
 .top-media-wrap {
   position: relative;
   margin-bottom: 15rpx;
-  height: 430rpx;
+  height: 468rpx;
+  text-shadow: 0 0 1px #999;
   border-radius: 40rpx;
   overflow: hidden;
 }
 .top-media-swiper {
-  height: 430rpx;
+  height: 468rpx;
 }
 .top-media {
   position: relative;
 }
 .top-media-cover {
   width: 100%;
-  height: 430rpx;
+  height: 468rpx;
   border-radius: 40rpx;
 }
 
@@ -24,7 +25,7 @@
   padding: 16rpx 24rpx 0 24rpx;
   width: 100%;
   color: #fff;
-  background: linear-gradient(0, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 100%);
+  background: linear-gradient(0, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
 }
 .time-date {
   font-size: 44rpx;
@@ -73,18 +74,19 @@
   bottom: 100rpx;
   padding: 24rpx;
   width: 100%;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 100%);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
 }
 .top-media-title {
+  flex: 1;
   color: #fff;
   font-size: 28rpx;
+  line-height: 1;
   font-weight: bold;
 }
 
 .author-info-wrap {
   display: flex;
   align-items: center;
-  margin-top: 8rpx;
   color: #fff;
   font-size: 20rpx;
 }
