--- a/pages/subpages/mine/coupon/index.wxml
+++ b/pages/subpages/mine/coupon/index.wxml
@@ -14,6 +14,6 @@
   <coupon-item wx:for="{{couponList}}" wx:key="index" item="{{item}}" />
 </view>
 
-<view class="no-more-tips" wx:if="{{finished && couponList.length}}">～到底啦～</view>
+<view class="no-more-tips" wx:if="{{finished && couponList.length}}">～没有更多啦～</view>
 
 <empty-illus wx:if="{{!couponList.length}}" desc="暂无优惠券" />
