--- a/components/fall-flow/index.wxml
+++ b/components/fall-flow/index.wxml
@@ -1,8 +1,8 @@
 <view class="fall-flow-wrap">
   <view class="left-list">
-    <item class="item" wx:for="{{leftList}}" wx:key="index" item="{{item}}" mediaScene="{{mediaScene}}" data-info="{{item}}" />
+    <item class="item" wx:for="{{leftList}}" wx:key="index" item="{{item}}" mediaScene="{{mediaScene}}" data-info="{{item}}" showShopInfo="{{showShopInfo}}" />
   </view>
   <view class="right-list">
-    <item class="item" wx:for="{{rightList}}" wx:key="index" item="{{item}}" mediaScene="{{mediaScene}}" data-info="{{item}}" />
+    <item class="item" wx:for="{{rightList}}" wx:key="index" item="{{item}}" mediaScene="{{mediaScene}}" data-info="{{item}}" showShopInfo="{{showShopInfo}}" />
   </view>
 </view>
