--- a/pages/subpages/common/search/index.wxml
+++ b/pages/subpages/common/search/index.wxml
@@ -123,55 +123,55 @@
   </view>
 
   <fall-flow wx:if="{{mediaList.length}}" list="{{mediaList}}" generic:item="media-item" />
-  <view class="no-more-tips" wx:if="{{mediaFinished && mediaList.length}}">～到底啦～</view>
+  <view class="no-more-tips" wx:if="{{mediaFinished && mediaList.length}}">～没有更多啦～</view>
 </view>
 
 <view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 1}}">
   <fall-flow wx:if="{{videoList.length}}" list="{{videoList}}" generic:item="video-item" />
   <empty-illus wx:if="{{videoFinished && !videoList.length}}" desc="没有找到相关视频游记" />
-  <view class="no-more-tips" wx:if="{{videoFinished && videoList.length}}">～到底啦～</view>
+  <view class="no-more-tips" wx:if="{{videoFinished && videoList.length}}">～没有更多啦～</view>
 </view>
 
 <view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 2}}">
   <fall-flow wx:if="{{noteList.length}}" list="{{noteList}}" generic:item="note-item" />
   <empty-illus wx:if="{{noteFinished && !noteList.length}}" desc="没有找到相关图文游记" />
-  <view class="no-more-tips" wx:if="{{noteFinished && noteList.length}}">～到底啦～</view>
+  <view class="no-more-tips" wx:if="{{noteFinished && noteList.length}}">～没有更多啦～</view>
 </view>
 
 <view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 3}}">
   <fall-flow wx:if="{{liveList.length}}" list="{{liveList}}" generic:item="live-item" />
   <empty-illus wx:if="{{liveFinished && !liveList.length}}" desc="没有找到相关直播" />
-  <view class="no-more-tips" wx:if="{{liveFinished && liveList.length}}">～到底啦～</view>
+  <view class="no-more-tips" wx:if="{{liveFinished && liveList.length}}">～没有更多啦～</view>
 </view>
 
 <view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 4}}">
   <fall-flow wx:if="{{scenicList}}" list="{{scenicList}}" generic:item="scenic-item-grid" />
   <empty-illus wx:if="{{scenicFinished && !scenicList.length}}" desc="没有找到相关景点" />
-  <view class="no-more-tips" wx:if="{{scenicFinished && scenicList.length}}">～到底啦～</view>
+  <view class="no-more-tips" wx:if="{{scenicFinished && scenicList.length}}">～没有更多啦～</view>
 </view>
 
 <view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 5}}">
   <fall-flow wx:if="{{hotelList}}" list="{{hotelList}}" generic:item="hotel-item-grid" />
   <empty-illus wx:if="{{hotelFinished && !hotelList.length}}" desc="没有找到相关酒店" />
-  <view class="no-more-tips" wx:if="{{hotelFinished && hotelList.length}}">～到底啦～</view>
+  <view class="no-more-tips" wx:if="{{hotelFinished && hotelList.length}}">～没有更多啦～</view>
 </view>
 
 <view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 6}}">
   <fall-flow wx:if="{{restaurantList}}" list="{{restaurantList}}" generic:item="restaurant-item-grid" />
   <empty-illus wx:if="{{restaurantFinished && !restaurantList.length}}" desc="没有找到相关餐厅美食" />
-  <view class="no-more-tips" wx:if="{{restaurantFinished && restaurantList.length}}">～到底啦～</view>
+  <view class="no-more-tips" wx:if="{{restaurantFinished && restaurantList.length}}">～没有更多啦～</view>
 </view>
 
 <view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 7}}">
   <fall-flow wx:if="{{goodsList.length}}" list="{{goodsList}}" generic:item="goods-item-grid" />
   <empty-illus wx:if="{{goodsFinished && !goodsList.length}}" desc="没有找到相关商品" />
-  <view class="no-more-tips" wx:if="{{goodsFinished && goodsList.length}}">～到底啦～</view>
+  <view class="no-more-tips" wx:if="{{goodsFinished && goodsList.length}}">～没有更多啦～</view>
 </view>
 
 <view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 8}}">
   <user-item wx:for="{{userList}}" wx:key="index" item="{{item}}" />
   <empty-illus wx:if="{{userFinished && !userList.length}}" desc="没有找到相关用户" />
-  <view class="no-more-tips" wx:if="{{userFinished && userList.length}}">～到底啦～</view>
+  <view class="no-more-tips" wx:if="{{userFinished && userList.length}}">～没有更多啦～</view>
 </view>
 
 <van-calendar 
