--- a/pages/subpages/mall/goods/subpages/cart/index.wxml
+++ b/pages/subpages/mall/goods/subpages/cart/index.wxml
@@ -69,7 +69,7 @@
     <fall-flow list="{{recommendGoodsList}}" generic:item="goods-item" />
   </view>
 
-  <view class="nomore-tip" wx:if="{{recommendGoodsList.length && finished}}">～到底啦～</view>
+  <view class="nomore-tip" wx:if="{{recommendGoodsList.length && finished}}">～没有更多啦～</view>
 </view>
 
 <view class="bottom-bar" wx:if="{{cartList.length}}">
