--- a/pages/subpages/mall/goods/subpages/shop/index.wxml
+++ b/pages/subpages/mall/goods/subpages/shop/index.wxml
@@ -7,25 +7,22 @@
   <image class="cover" mode="widthFix" src="{{shopInfo.cover || 'https://static.tiddler.cn/mp/bg.png'}}" />
 </view>
 
-<view class="shop-info-wrap row">
-  <view class="avatar-wrap">
-    <image class="shop-logo" src="{{shopInfo.logo}}" />
-    <image class="enterprise-label" wx:if="{{shopInfo.type === 2}}" src="https://img.ubo.vip/mp/selection/goods-detail/firm-icon.png" />
-  </view>
-  <view class="info">
-    <view class="shop-name omit single">{{shopInfo.name}}</view>
-    <view class="authentication row">{{shopInfo.type === 2 ? '企业店铺' : '个人店铺'}}</view>
-  </view>
-  <view class="share-btn" bindtap="share">
-    <image class="share-icon" src="./images/share-icon.png"/>
-    <view>分享</view>
-  </view>
-</view>
 
-<view class="goods-list-wrap">
-  <fall-flow list="{{goodsList}}" generic:item="goods-item" />
-  <empty-illus wx:if="{{finished && !goodsList.length}}" desc="暂无列表" />
-  <view class="no-more-tips" wx:if="{{finished && goodsList.length}}">～到底啦～</view>
+<view class="container">
+  <view class="shop-info-wrap row">
+    <image class="shop-logo" src="{{shopInfo.logo}}" />
+    <view class="info">
+      <view class="shop-name omit single">{{shopInfo.name}}</view>
+      <view class="authentication row">{{shopInfo.type === 2 ? '企业店铺' : '个人店铺'}}</view>
+    </view>
+    <image class="share-icon" bindtap="share" src="./images/share-icon.png"/>
+  </view>
+  
+  <view class="goods-list-wrap">
+    <fall-flow list="{{goodsList}}" generic:item="goods-item" showShopInfo="{{false}}" />
+    <empty-illus wx:if="{{finished && !goodsList.length}}" desc="暂无列表" />
+    <view class="no-more-tips" wx:if="{{finished && goodsList.length}}">～没有更多啦～</view>
+  </view>
 </view>
 
 <modal-mask wx:if="{{posterModalVisible}}" filter bindtap="hidePosterModal" />
