--- a/pages/subpages/mall/goods/subpages/shop/index.wxss
+++ b/pages/subpages/mall/goods/subpages/shop/index.wxss
@@ -1,11 +1,12 @@
 .cover-wrap {
   position: relative;
-  height: 360rpx;
+  height: 480rpx;
   font-size: 0;
   overflow: hidden;
 }
 .cover {
   width: 100%;
+  z-index: -1;
 }
 .back-icon-wrap {
   position: absolute;
@@ -13,30 +14,24 @@
   height: 44px;
 }
 
+.container {
+  margin-top: -80rpx;
+  min-height: calc(100vh - 280rpx);
+  background: rgba(255, 255, 255, 0.68);
+  backdrop-filter: blur(8px);
+  border-radius: 60rpx 60rpx 0 0;
+}
 .shop-info-wrap {
   padding: 24rpx;
-  background: #fff;
-}
-.avatar-wrap {
-  position: relative;
-  width: 88rpx;
-  height: 88rpx;
-  font-size: 0;
+  padding-right: 32rpx;
 }
 .shop-logo {
-  width: 100%;
-  height: 100%;
+  width: 88rpx;
+  height: 88rpx;
   border-radius: 50%;
 }
-.enterprise-label {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  width: 30rpx;
-  height: 30rpx;
-}
 .info {
-  margin: 0 16rpx;
+  margin: 0 24rpx;
   flex: 1;
 }
 .shop-name {
@@ -47,13 +42,13 @@
 .authentication {
   margin-top: 8rpx;
   padding: 0 16rpx;
-  height: 32rpx;
+  height: 36rpx;
   width: fit-content;
-  color: #FFE5BD;
+  color: var(--gold-1);
   font-size: 18rpx;
-  line-height: 1;
-  border-radius: 16rpx;
-  background: linear-gradient(90deg, #434D5E 0%, #0F131A 100%);
+  font-weight: bold;
+  border-radius: 18rpx;
+  background: var(--blue-linear-2);
 }
 .share-btn {
   text-align: center;
