--- a/pages/subpages/mine/history/index.wxml
+++ b/pages/subpages/mine/history/index.wxml
@@ -11,31 +11,31 @@
 <view class="container">
   <block wx:if="{{curMenuIdx === 0}}">
     <fall-flow class="fall-flow" list="{{mediaList}}" generic:item="media-item" />
-    <view class="no-more-tips" wx:if="{{!isLoading && finished && mediaList.length}}">～到底啦～</view>
+    <view class="no-more-tips" wx:if="{{!isLoading && finished && mediaList.length}}">～没有更多啦～</view>
     <empty-illus wx:if="{{finished && !mediaList.length}}" desc="暂无历史记录" height="1200rpx" />
   </block>
 
   <block wx:if="{{curMenuIdx === 1}}">
     <fall-flow class="fall-flow" list="{{productLists[0].list}}" generic:item="scenic-item" />
-    <view class="no-more-tips" wx:if="{{!isLoading && productLists[0].finished && productLists[0].list.length}}">～到底啦～</view>
+    <view class="no-more-tips" wx:if="{{!isLoading && productLists[0].finished && productLists[0].list.length}}">～没有更多啦～</view>
     <empty-illus wx:if="{{productLists[0].finished && !productLists[0].list.length}}" desc="暂无历史记录" height="1200rpx" />
   </block>
 
   <block wx:if="{{curMenuIdx === 2}}">
     <fall-flow class="fall-flow" list="{{productLists[1].list}}" generic:item="hotel-item" />
-    <view class="no-more-tips" wx:if="{{!isLoading && productLists[1].finished && productLists[1].list.length}}">～到底啦～</view>
+    <view class="no-more-tips" wx:if="{{!isLoading && productLists[1].finished && productLists[1].list.length}}">～没有更多啦～</view>
     <empty-illus wx:if="{{productLists[1].finished && !productLists[1].list.length}}" desc="暂无历史记录" height="1200rpx" />
   </block>
 
   <block wx:if="{{curMenuIdx === 3}}">
     <fall-flow class="fall-flow" list="{{productLists[2].list}}" generic:item="restaurant-item" />
-    <view class="no-more-tips" wx:if="{{!isLoading && productLists[2].finished && productLists[2].list.length}}">～到底啦～</view>
+    <view class="no-more-tips" wx:if="{{!isLoading && productLists[2].finished && productLists[2].list.length}}">～没有更多啦～</view>
     <empty-illus wx:if="{{productLists[2].finished && !productLists[2].list.length}}" desc="暂无历史记录" height="1200rpx" />
   </block>
 
   <block wx:if="{{curMenuIdx === 4}}">
     <fall-flow class="fall-flow" list="{{productLists[3].list}}" generic:item="goods-item" />
-    <view class="no-more-tips" wx:if="{{!isLoading && productLists[3].finished && productLists[3].list.length}}">～到底啦～</view>
+    <view class="no-more-tips" wx:if="{{!isLoading && productLists[3].finished && productLists[3].list.length}}">～没有更多啦～</view>
     <empty-illus wx:if="{{productLists[3].finished && !productLists[3].list.length}}" desc="暂无历史记录" height="1200rpx" />
   </block>
 
