--- a/utils/filters/time.wxs
+++ b/utils/filters/time.wxs
@@ -50,7 +50,7 @@ function week(timeStamp) {
   }
 }
 
-function countDown(timeStamp, statement) {
+function countdown(timeStamp, statement) {
   var days = Math.floor(timeStamp / (24 * 60 * 60));
   var hours = format(Math.floor((timeStamp % (24 * 60 * 60)) / (60 * 60)));
   var minutes = format(Math.floor((timeStamp % (60 * 60)) / 60));
@@ -128,7 +128,7 @@ function calculateDuration(startTimeStamp, statement, endTimeStamp = 0) {
       var now = getDate().getTime();
       diffValue = (now - startTimeStamp * 1000) / 1000;
     }
-    return countDown(diffValue, statement);
+    return countdown(diffValue, statement);
   }
 }
 
@@ -136,7 +136,7 @@ module.exports = {
   format: format,
   transform: transform,
   week: week,
-  countDown: countDown,
+  countdown: countdown,
   timeDiff: timeDiff,
   calculateDuration: calculateDuration,
 };
