--- a/pages/subpages/mine/merchant/subpages/goods-order/subpages/order-detail/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/goods-order/subpages/order-detail/index.wxml
@@ -2,6 +2,63 @@
 <wxs module="ORDER" src="../../../../../utils/order.wxs" />
 
 <view class="container">
+  <view class="card" wx:if="{{orderInfo.deliveryMode === 1}}">
+    <view class="ship-info-wrap" wx:if="{{packageList.length}}">
+      <view class="package-info row" wx:if="{{packageList.length > 1}}">
+        <scroll-view class="package-list-wrap" scroll-x>
+          <view class="package-list">
+            <view 
+              class="package {{index === selectedPackageIdx ? 'selected' : ''}}" 
+              wx:for="{{packageList}}" 
+              wx:key="id" 
+              wx:for-item="package"
+              bindtap="selectPackage"
+              data-index="{{index}}"
+            >
+              <view class="package-goods" wx:for="{{package.goodsList}}" wx:key="id" wx:for-item="goods">
+                <image class="package-goods-cover" src="{{goods.goodsCover}}" />
+                <view class="package-goods-num">x{{goods.goodsNumber}}</view>
+              </view>
+            </view>
+          </view>
+        </scroll-view>
+        <view class="package-num">共{{packageList.length}}件包裹</view>
+      </view>
+      <view class="row" bindtap="checkShippingInfo">
+        <image class="ship-icon" src="./images/ship.png" />
+        <view class="ship-code omit single">
+          {{packageList[selectedPackageIdx].shipChannel}}｜{{packageList[selectedPackageIdx].shipSn}}
+        </view>
+        <view class="more-btn row center">
+          <view>查看物流</view>
+          <image class="more-icon" src="./images/arrow.png" />
+        </view>
+      </view>
+    </view>
+    <view class="consignee-info-wrap row">
+      <image class="address-icon" src="./images/address.png" />
+      <view class="consignee-info">
+        <view class="row">
+          <text class="consignee-name">{{orderInfo.consignee}}</text>
+          <text class="consignee-mobile">{{orderInfo.mobile}}</text>
+        </view>
+        <view class="address-detail">{{orderInfo.address}}</view>
+      </view>
+      <view class="copy-btn row center" bindtap="copyAddress">复制</view>
+    </view>
+  </view>
+
+  <view class="card row" wx:if="{{orderInfo.deliveryMode === 2}}" bindtap="navigation">
+    <view class="pickup-address-info">
+      <view class="pickup-address-name">{{orderInfo.pickupAddress.name}}</view>
+      <view class="pickup-address-detail">{{orderInfo.pickupAddress.addressDetail}}</view>
+    </view>
+    <view class="navgation-btn row">
+      <view>导航</view>
+      <image class="navgation-btn-arrow" src="/images/arrow.png" />
+    </view>
+  </view>
+
   <view class="card">
     <goods-list list="{{orderInfo.goodsList}}" status="{{orderInfo.status}}" />
     <view class="list row between">
@@ -12,19 +69,22 @@
       <view class="title">运费</view>
       <price-unit price="{{orderInfo.freightPrice}}" color="#333" fontSize="20rpx" integerFontSize="28rpx" />
     </view>
+    <view class="list row between" wx:if="{{orderInfo.deductionBalance}}">
+      <view class="title">余额抵扣</view>
+      <view class="row">
+        <text>-</text>
+        <price-unit price="{{orderInfo.deductionBalance}}" color="#333" fontSize="20rpx" integerFontSize="28rpx" />
+      </view>
+    </view>
     <view class="list row between">
       <view class="title">{{ORDER.paymentDesc(orderInfo.status)}}</view>
       <price-unit price="{{orderInfo.paymentAmount}}" />
     </view>
+    <view view class="list row between" wx:if="{{orderInfo.status === 204}}">
+      <view class="title">退款金额</view>
+      <price-unit price="{{orderInfo.refundAmount}}" color="#333" fontSize="20rpx" integerFontSize="28rpx" />
+    </view>
     <view class="more-info-wrap">
-      <view class="list row top">
-        <view class="title">收货信息：</view>
-        <view class="content">{{orderInfo.consignee}}，{{orderInfo.mobile}}，{{orderInfo.address}}</view>
-        <view class="copy-btn">
-          <text>｜</text>
-          <text style="color: #169dfe" bindtap="copyAddress">复制</text>
-        </view>
-      </view>
       <view class="list row between">
         <view class="title">订单编号：</view>
         <view>
@@ -54,11 +114,6 @@
 </view>
 
 <view class="bottom-bar">
-  <button 
-    class="btn" 
-    wx:if="{{orderInfo.status === 301}}" 
-    bindtap="navToShipping" data-id="{{orderInfo.id}}"
-  >查看物流</button>
   <button 
     class="btn active" 
     wx:if="{{item.status === 201}}"
